@@ -2,6 +2,8 @@
 	* Fixed autoconf warnings
 	* Don't append the original query to path when it already has a query (fixes WMP11/12 access)
 	* Fixed several memory leaks in Objective-C wrapper
+	* Proper handling of edge cases in src/cybergarage/upnp/cservice.c and
+	  std/av/src/cybergarage/upnp/std/av/cprotocolinfo.c
 
 2010-06-28 Christian Zuckschwerdt <Christian@Zuckschwerdt.org>
 	* Fixed CGUpnpAction::arguments() not to release temporary object.
